force-app/main/default/objects/ClinicalTrialRequirement__c/ClinicalTrialRequirement__c.object-meta.xml
<CustomObject>
    <description>Stores GCP training, protocol-specific training, safety reporting acknowledgments,
        and other clinical trial compliance requirements for providers participating in research.</description>
    <label>Clinical Trial Requirement</label>
    <nameField>
        <displayFormat>CTR-{00000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>