force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Evidence_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evidence Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>