force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Evidence_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence Uploaded</label>
    <type>Checkbox</type>
</CustomField>