force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration date of the GCP certificate or trial-specific training requirement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>