force-app/main/default/objects/ClinicalTrialRequirement__c/fields/External_Verification_Message__c.field-meta.xml
<CustomField>
    <fullName>External_Verification_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Verification Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>