force-app/main/default/objects/ClinicalTrialRequirement__c/fields/External_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Verification_Status__c</fullName>
    <label>External Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Attempted</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>No Match Found</fullName>
            </value>
            <value>
                <fullName>Multiple Matches</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>