force-app/main/default/objects/ClinicalTrialRequirement__c/fields/GCP_Certificate_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>GCP_Certificate_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GCP Certificate Expiration Date</label>
    <type>Date</type>
</CustomField>