force-app/main/default/objects/ClinicalTrialRequirement__c/fields/GCP_Certificate_ID__c.field-meta.xml
<CustomField>
    <fullName>GCP_Certificate_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GCP Certificate ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>