force-app/main/default/objects/ClinicalTrialRequirement__c/fields/GCP_Expired__c.field-meta.xml
<CustomField>
    <fullName>GCP_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GCP Expired</label>
    <type>Checkbox</type>
</CustomField>