force-app/main/default/objects/ClinicalTrialRequirement__c/fields/GCP_Expiring_Soon__c.field-meta.xml
<CustomField>
    <fullName>GCP_Expiring_Soon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GCP Expiring Soon</label>
    <type>Checkbox</type>
</CustomField>