force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Last_External_Verification__c.field-meta.xml
<CustomField>
    <fullName>Last_External_Verification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last External Verification</label>
    <type>Date</type>
</CustomField>