force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Name__c</fullName>
    <description>Protocol name or identifier for which this compliance requirement applies.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Protocol Name / ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>