force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Clinical Trial Requirements</relationshipLabel>
    <relationshipName>Clinical_Trial_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>