force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Requirement_Complete__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Complete__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;Verified&quot;), Evidence_Uploaded__c)</formula>
    <label>Requirement Complete</label>
    <type>Checkbox</type>
</CustomField>