force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GCP Training</fullName>
                <default>true</default>
                <label>GCP Training</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Protocol Training</fullName>
            </value>
            <value>
                <fullName>Safety Reporting Acknowledgment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>