force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Trial_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Trial_Assignment__c</fullName>
    <label>Trial Assignment</label>
    <referenceTo>Trial_Assignment__c</referenceTo>
    <relationshipLabel>Clinical Trial Requirements</relationshipLabel>
    <relationshipName>Clinical_Trial_Requirements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>