force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Verification_Source__c.field-meta.xml
<CustomField>
    <fullName>Verification_Source__c</fullName>
    <label>Verification Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CITI Program</fullName>
                <default>true</default>
                <label>CITI Program</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sponsor Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>