force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Verification_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification URL</label>
    <type>Url</type>
</CustomField>