force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who verified this clinical trial requirement.</description>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verified Requirements</relationshipLabel>
    <relationshipName>Verified_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>