force-app/main/default/objects/ClinicalTrialRequirement__c/fields/Verified_On__c.field-meta.xml
<CustomField>
    <fullName>Verified_On__c</fullName>
    <description>Date and time when this requirement was verified as complete.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified On</label>
    <type>DateTime</type>
</CustomField>