force-app/main/default/objects/ClinicalTrialRequirement__c/validationRules/Require_Evidence_When_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Evidence_When_Verified</fullName>
    <active>true</active>
    <description>Prevents setting Status to Verified unless Evidence Uploaded is checked.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Verified&quot;), NOT(Evidence_Uploaded__c))</errorConditionFormula>
    <errorDisplayField>Evidence_Uploaded__c</errorDisplayField>
    <errorMessage>Evidence must be marked as uploaded before the requirement can be set to Verified.</errorMessage>
</ValidationRule>